# ChangeLog for games-puzzle/concentration
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-puzzle/concentration/ChangeLog,v 1.13 2014/05/15 16:50:04 ulm Exp $

  15 May 2014; Ulrich Müller <ulm@gentoo.org> concentration-1.2-r1.ebuild:
  Fix USE dependency on media-libs/libsdl, "audio" USE flag was renamed to
  "sound", bug 357661.

  13 Aug 2010; Joseph Jezak <josejx@gentoo.org> concentration-1.2-r1.ebuild:
  Marked ppc stable for bug #325149.

  11 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  concentration-1.2-r1.ebuild:
  stable x86, bug 325149

  24 Jun 2010; Pacho Ramos <pacho@gentoo.org> concentration-1.2-r1.ebuild:
  stable amd64, bug 325149

*concentration-1.2-r1 (18 May 2010)

  18 May 2010; Michael Sterrett <mr_bones_@gentoo.org>
  +concentration-1.2-r1.ebuild, +files/concentration-1.2-gentoo.patch:
  fix memory corruption bug; change HOMEPAGE (bug #320389)

  13 Mar 2007; Tristan Heaven <nyhm@gentoo.org> concentration-1.2.ebuild:
  Install menu entry, bug #159852

  15 Aug 2006; Thomas Cort <tcort@gentoo.org> concentration-1.2.ebuild:
  Stable on amd64 wrt Bug #143961

*concentration-1.2 (10 Nov 2005)

  10 Nov 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +concentration-1.2.ebuild:
  version bump (bug #112012)

  22 Nov 2004; Joseph Jezak <josejx@gentoo.org> concentration-1.1.ebuild:
  Marked ppc stable.

  21 Mar 2004; David Holm <dholm@gentoo.org> concentration-1.1.ebuild:
  Added to ~ppc.

*concentration-1.1 (20 Mar 2004)

  20 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
  concentration-1.1.ebuild:
  version bump

*concentration-1.0.1 (26 Feb 2004)

  26 Feb 2004; Michael Sterrett <mr_bones_@gentoo.org>
  concentration-1.0.1.ebuild, metadata.xml:
  Initial commit
